tests/cases/success/plain_print_string.u
import sti.

-> main() {
  string msg.
  msg = "hello".
  print(msg).
  print(" ").
  print(7i).
  0i!
}
