tests/cases/fail/input_non_identifier.u
import sti.

-> main() {
  input(1i).
  0i!
}
